spec/ruby/core/kernel/__dir___spec.rb
@@ -12,9 +12,19 @@ describe "Kernel#__dir__" do
     end
   end
 
-  context "when used in eval with top level binding" do
-    it "returns the real name of the directory containing the currently-executing file" do
-      eval("__dir__", binding).should == File.realpath(File.dirname(__FILE__))
+  ruby_version_is ""..."2.7" do
+    context "when used in eval with top level binding" do
+      it "returns the real name of the directory containing the currently-executing file" do
+        eval("__dir__", binding).should == File.realpath(File.dirname(__FILE__))
+      end
+    end
+  end
+
+  ruby_version_is "2.7" do
+    context "when used in eval with top level binding" do
+      it "returns nil" do
+        eval("__dir__", binding).should == nil
+      end
     end
   end
 end
