test/ruby/test_eval.rb
@@ -470,9 +470,12 @@ class TestEval < Test::Unit::TestCase
   end
 
   def test_eval_location_binding
-    assert_warning(/__FILE__ in eval/) do
-      assert_equal(__FILE__, eval("__FILE__", binding))
-    end
+    assert_equal(['(eval)', 1], eval("[__FILE__, __LINE__]", nil))
+    assert_equal(['(eval)', 1], eval("[__FILE__, __LINE__]", binding))
+    assert_equal(['foo', 1], eval("[__FILE__, __LINE__]", nil, 'foo'))
+    assert_equal(['foo', 1], eval("[__FILE__, __LINE__]", binding, 'foo'))
+    assert_equal(['foo', 2], eval("[__FILE__, __LINE__]", nil, 'foo', 2))
+    assert_equal(['foo', 2], eval("[__FILE__, __LINE__]", binding, 'foo', 2))
   end
 
   def test_fstring_instance_eval
